language/grammar/mir/test/corpus/terminators.txt
==================================
Control flow terminators and block args
==================================

function @flow(v0: int64, v1: int64) -> int64 {
block0(v0: int64, v1: int64):
    branch v0, block1(v1), block2(v0)
block1(v2: int64):
    check v2, block3, block4
block2(v3: int64):
    jump block4
block3:
    yield v2 -> resume(v3) | cleanup
block4:
    switch v1, block5, block6
block5:
    return v0
block6:
    panic
block7:
    unwind.resume
block8:
    trap.abort
block9:
    unreachable
}


---

(source_file
  (function_keyword)
  (symbol_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (type_keyword)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (type_keyword)
  (punctuation)
  (arrow)
  (type_keyword)
  (punctuation)
  (block_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (type_keyword)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (type_keyword)
  (punctuation)
  (punctuation)
  (terminator_keyword)
  (ssa_identifier)
  (punctuation)
  (block_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (punctuation)
  (block_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (block_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (type_keyword)
  (punctuation)
  (punctuation)
  (terminator_keyword)
  (ssa_identifier)
  (punctuation)
  (block_identifier)
  (punctuation)
  (block_identifier)
  (block_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (type_keyword)
  (punctuation)
  (punctuation)
  (terminator_keyword)
  (block_identifier)
  (block_identifier)
  (punctuation)
  (terminator_keyword)
  (ssa_identifier)
  (arrow)
  (identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (operator)
  (identifier)
  (block_identifier)
  (punctuation)
  (terminator_keyword)
  (ssa_identifier)
  (punctuation)
  (block_identifier)
  (punctuation)
  (block_identifier)
  (block_identifier)
  (punctuation)
  (terminator_keyword)
  (ssa_identifier)
  (block_identifier)
  (punctuation)
  (terminator_keyword)
  (block_identifier)
  (punctuation)
  (terminator_keyword)
  (block_identifier)
  (punctuation)
  (terminator_keyword)
  (block_identifier)
  (punctuation)
  (terminator_keyword)
  (punctuation))
