language/grammar/mir/test/corpus/types.txt
==================================
Type token forms
==================================

function @refs(v0: ref<int32, managed>, v1: ref<int32, unique, readonly>, v2: ref<int32, raw, space(shared)>, v3: ref<int32, borrowed, lifetime(0)>) -> typeDescriptor {
block0(v0: ref<int32, managed>, v1: ref<int32, unique, readonly>, v2: ref<int32, raw, space(shared)>, v3: ref<int32, borrowed, lifetime(0)>):
    v4: usize = cast v0
    return v4
}


---

(source_file
  (function_keyword)
  (symbol_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (type_keyword)
  (operator)
  (type_keyword)
  (punctuation)
  (memory_keyword)
  (operator)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (type_keyword)
  (operator)
  (type_keyword)
  (punctuation)
  (memory_keyword)
  (punctuation)
  (memory_keyword)
  (operator)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (type_keyword)
  (operator)
  (type_keyword)
  (punctuation)
  (memory_keyword)
  (punctuation)
  (type_keyword)
  (punctuation)
  (identifier)
  (punctuation)
  (operator)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (type_keyword)
  (operator)
  (type_keyword)
  (punctuation)
  (memory_keyword)
  (punctuation)
  (identifier)
  (punctuation)
  (number_literal)
  (punctuation)
  (operator)
  (punctuation)
  (arrow)
  (type_keyword)
  (punctuation)
  (block_identifier)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (type_keyword)
  (operator)
  (type_keyword)
  (punctuation)
  (memory_keyword)
  (operator)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (type_keyword)
  (operator)
  (type_keyword)
  (punctuation)
  (memory_keyword)
  (punctuation)
  (memory_keyword)
  (operator)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (type_keyword)
  (operator)
  (type_keyword)
  (punctuation)
  (memory_keyword)
  (punctuation)
  (type_keyword)
  (punctuation)
  (identifier)
  (punctuation)
  (operator)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (type_keyword)
  (operator)
  (type_keyword)
  (punctuation)
  (memory_keyword)
  (punctuation)
  (identifier)
  (punctuation)
  (number_literal)
  (punctuation)
  (operator)
  (punctuation)
  (punctuation)
  (ssa_identifier)
  (punctuation)
  (type_keyword)
  (operator)
  (identifier)
  (ssa_identifier)
  (terminator_keyword)
  (ssa_identifier)
  (punctuation))

==================================
Composite type token forms
==================================

type @AtomicCounter = atomic<uint32>;
type @Outcome = variant<uint8> {
    0uint8 = int32;
    1uint8 = int32;
};


---

(source_file
  (declaration_keyword)
  (symbol_identifier)
  (operator)
  (type_keyword)
  (operator)
  (type_keyword)
  (operator)
  (punctuation)
  (declaration_keyword)
  (symbol_identifier)
  (operator)
  (type_keyword)
  (operator)
  (type_keyword)
  (operator)
  (punctuation)
  (number_literal)
  (operator)
  (type_keyword)
  (punctuation)
  (number_literal)
  (operator)
  (type_keyword)
  (punctuation)
  (punctuation)
  (punctuation))

==================================
Class and rest type forms
==================================

type @Cell = class { value: int32 };
type @Spread = (rest (int32, int32)) => void;

---

(source_file
  (declaration_keyword)
  (symbol_identifier)
  (operator)
  (type_keyword)
  (punctuation)
  (identifier)
  (punctuation)
  (type_keyword)
  (punctuation)
  (punctuation)
  (declaration_keyword)
  (symbol_identifier)
  (operator)
  (punctuation)
  (memory_keyword)
  (punctuation)
  (type_keyword)
  (punctuation)
  (type_keyword)
  (punctuation)
  (punctuation)
  (operator)
  (type_keyword)
  (punctuation))
